@@ -1,4 +1,3 @@
-
 package com.example.demo.service;
 
 import com.example.demo.model.BonusModel;
@@ -12,9 +11,7 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.junit4.SpringRunner;
 
 import java.util.ArrayList;
-import java.util.NoSuchElementException;
 import java.util.Optional;
-import java.util.Random;
 
 import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
@@ -29,52 +26,65 @@ public class BonusServiceTest {
     BonusService bonusService;
 
     @MockBean
-     BonusRepository bonusRepository;
+    BonusRepository bonusRepository;
 
 
-    private  ArrayList<BonusModel> bonusModels;
+    private ArrayList<BonusModel> bonusModels;
 
     @Before
-    public  void before() throws NoSuchFieldException, IllegalAccessException {
-        bonusModels = new ArrayList<>();
-        Random random = new Random();
-        for (int i = 1; i < 5; i++) {
-            bonusModels.add(new BonusModel(i, 2, i * 10));
-        }
-
-
+    public void before() {
+        initArray();
         when(bonusRepository.findAll()).thenReturn(bonusModels);
-        when(bonusRepository.count()).thenReturn(new Long(bonusModels.size()));
-        bonusService.createPercentMap();
+        when(bonusRepository.count()).thenReturn(Long.valueOf(bonusModels.size()));
+        bonusService.readDB();
     }
 
 
     @Test
     public void shouldReturnCollectionUponGetAll() {
+        int size = bonusModels.size() - 1;
+        int i = 0;
+        while (size>0){
+            if (bonusModels.get(i).getValue() == bonusModels.get(i + 1).getValue()) {
+                bonusModels.remove(i);
+            }else {
+                i++;
+            }
+            size--;
+        }
+
         assertArrayEquals(bonusModels.toArray(), bonusService.getAllBonuses().toArray());
+        initArray();
     }
 
     @Test
     public void shouldReturnEnptyCollectionUponGetFromEmptyDB() {
 
         when(bonusRepository.findAll()).thenReturn(new ArrayList<>());
+        bonusService.readDB();
 
         assertArrayEquals((new ArrayList<BonusModel>()).toArray(), bonusService.getAllBonuses().toArray());
     }
 
 
-    @Test(expected = NullPointerException.class)
+    @Test(expected = RuntimeException.class)
     public void shouldThrowNullPointerExceptionUponChooseBonusFromEmptyDB() {
         when(bonusRepository.findAll()).thenReturn(new ArrayList<>());
-        bonusService.createPercentMap();
+        bonusService.readDB();
         assertNull(bonusService.chooseBonuse());
     }
 
     @Test
     public void shouldReturn2UponChooseBonus() {
-        assertEquals(java.util.Optional.of(2), Optional.ofNullable(bonusService.chooseBonuse()));
+
+        assertEquals(Optional.of(bonusModels.get(bonusModels.size() - 1)), Optional.ofNullable(bonusService.chooseBonuse()));
     }
 
-
+    private void initArray() {
+        bonusModels = new ArrayList<>();
+        for (int i = 1; i < 5; i++) {
+            bonusModels.add(new BonusModel(i, "mx" + i, 2, i));
+        }
+    }
 
 }
