@@ -1,8 +1,8 @@
 package com.example.demo.service;
 
+import com.example.demo.model.BonusModel;
 import com.example.demo.model.UserModel;
 import com.example.demo.repository.UserRepository;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -14,6 +14,8 @@ import org.springframework.test.context.junit4.SpringRunner;
 import java.util.ArrayList;
 import java.util.Optional;
 
+import static org.junit.Assert.assertArrayEquals;
+import static org.junit.Assert.assertEquals;
 import static org.mockito.Mockito.when;
 
 @RunWith(SpringRunner.class)
@@ -38,24 +40,27 @@ public class UserServiceTest {
         }
         when(userRepository.findAll()).thenReturn(userModels);
         when(userRepository.findById(1)).thenReturn(Optional.of(userModels.get(0)));
-        when(userRepository.count()).thenReturn(new Long(userModels.size()));
+        when(userRepository.count()).thenReturn(Long.valueOf(userModels.size()));
         when(userRepository.save(userModels.get(0))).thenReturn(userModels.get(0));
-        when(bonusService.chooseBonuse()).thenReturn(2);
     }
 
     @Test
     public void shouldGetAllUsers() {
-        Assert.assertArrayEquals(userModels.toArray(), userService.getAllUsers().toArray());
+        assertArrayEquals(userModels.toArray(), userService.getAllUsers().toArray());
     }
 
     @Test
     public void shouldGetEmpty() {
         when(userRepository.findAll()).thenReturn(userModels);
-        Assert.assertArrayEquals(userModels.toArray(), userService.getAllUsers().toArray());
+        assertArrayEquals(userModels.toArray(), userService.getAllUsers().toArray());
     }
 
     @Test
-    public void shouldMultCoins2(){
-        Assert.assertEquals(userModels.get(0).getCoins()*2,userService.updete(1).getCoins());
+    public void shouldMultCoins2() {
+        /*when(bonusService.chooseBonuse(userModels.get(1).getCoins(), 1))
+                .thenReturn(new BonusModel(1, "mx2", 2.0, 2 * userModels.get(1).getCoins()));//new BonusActionResponse( "mx1",2.0,100.0));*/
+        double expect = userModels.get(0).getCoins() * 2;
+        double actual = userService.updete(1, expect).getCoins();
+        assertEquals(expect, actual, 0.01);
     }
 }
